# eventuo-CV-Explorer

./: CMakeLists.txt  DIPDemo.pro  README.md  dipdemo.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ImageFileOpt/: ImageFileOpt.cpp  ImageFileOpt.h
ImageProcess/: CVImgProc.cpp  CVImgProc.h  SkinDetector.cpp  SkinDetector.h
QSS/: StyleSheet.qss
SubWindow/: SelChannelDlg.cpp  SelChannelDlg.h  SelChannelDlg.ui  SelColorReduceDivDlg.cpp  SelColorReduceDivDlg.h  SelColorReduceDivDlg.ui  SelFlipTypeDlg.cpp  SelFlipTypeDlg.h  SelFlipTypeDlg.ui  SelThreshDlg.cpp  SelThreshDlg.h  SelThreshDlg.ui
